@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <compiler.version>16</compiler.version>
+        <compiler.version>15</compiler.version>
     </properties>
 
     <pluginRepositories>
@@ -105,7 +105,6 @@
                     <compilerArgs>
                         <arg>--enable-preview</arg>
                         <arg>--add-modules=jdk.incubator.foreign</arg>
-                        <arg>--add-modules=jdk.incubator.vector</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
